vs2003_cd01/Program Files/Microsoft Visual Studio .NET 2003/SDK/v1.1/QuickStart/aspplus/samples/apps/errors/handlerr/error1.src
C# Source:CS/error1.aspx,CS/web.config
VB Source:VB/error1.aspx,VB/web.config
JScript Source:JS/error1.aspx,JS/web.config
